make it work with spring boot 3.0.13 (spring batch core 5.0.4)